rename user to account in logs and code
