# resources/resources_types.go
@@ -1,11 +1,11 @@
 package resources
 
 const (
-	RefreshType      = "refresh"
-	TokensPairType   = "tokens_pair"
-	AccessTokenType  = "access_token"
-	RefreshTokenType = "refresh_token"
-	UserSessionsType = "user_sessions"
-	UserSessionType  = "user_session"
-	AccountType      = "account"
+	RefreshType         = "refresh"
+	TokensPairType      = "tokens_pair"
+	AccessTokenType     = "access_token"
+	RefreshTokenType    = "refresh_token"
+	AccountSessionsType = "account_sessions"
+	AccountSessionType  = "account_session"
+	AccountType         = "account"
 )
